# Rasteriser

./: .gitignore  CMakeLists.txt  Main  Makefile  README.md  diablo3_pose_nm_tangent.tga  run.sh
Models/cornell-box/: CornellBox-Empty-RG.mtl  CornellBox-Original.mtl
Source/: Camera.cpp  Camera.h  Lighting.cpp  Lighting.h  Main.cpp  Material.cpp  Material.h  Model.cpp  Model.h  ObjImporter.cpp  ObjImporter.h  Rasteriser.cpp  Rasteriser.h  Raytracer.cpp  Renderer.cpp  Renderer.h  SDLauxiliary.cpp  TGAImage.cpp  TGAImage.h  TGAImport.cpp  TGAImport.h  TestModel.cpp  TestModel.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h
